poridhi-learning/main.tf
terraform {
  cloud {
    organization = "BjTechlife"

    workspaces {
      name = "Terraform-test-ec2"
    }
  }
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "5.32.0"
    }

  }
}

provider "aws" {
  region = "us-east-1"
}

## Create a VPC
resource "aws_vpc" "my_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = "true"

  tags = {
    Name = "my_vpc"
  }
}

## Create a Subnet
resource "aws_subnet" "my_subnet" {
  vpc_id                  = aws_vpc.my_vpc.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"

  tags = {
    Name = "my_subnet"
  }
}

## Create internet gateway
resource "aws_internet_gateway" "my_igw" {
  vpc_id = aws_vpc.my_vpc.id

}

## Create route table
resource "aws_route_table" "my_route_table" {
  vpc_id = aws_vpc.my_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.my_igw.id
  }
}

## Create route table association
resource "aws_route_table_association" "my_route_table_a" {
  subnet_id      = aws_subnet.my_subnet.id
  route_table_id = aws_route_table.my_route_table.id

}

## Security group
resource "aws_security_group" "public-sg" {
  vpc_id = aws_vpc.my_vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

## RSA key of size 4096 bits
resource "tls_private_key" "rsa" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

## Create key pair
resource "aws_key_pair" "ec2_key" {
  key_name   = "ec2_key"
  public_key = tls_private_key.rsa.public_key_openssh
}

# Download key pair
resource "local_file" "ec2_Key" {
  content  = tls_private_key.rsa.private_key_pem
  filename = "ec2_key"
}


## EC2 instance
resource "aws_instance" "ins-1" {
  ami                    = "ami-0b5eea76982371e91"
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.my_subnet.id
  vpc_security_group_ids = [aws_security_group.public-sg.id]
  key_name               = "ec2_key"
  user_data              = <<EOF
  #! /bin/bash
  sudo amazon-linux-extras install nginx1
  sudo service nginx start
  EOF

  tags = {
    Name = "Nginx"
  }

}
